--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
